tests/baselines/reference/ComputedPropertyName7.errors.txt
tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName7.ts(2,5): error TS1022: An index signature parameter must have a type annotation.


==== tests/cases/conformance/es6/computedPropertyNames/ComputedPropertyName7.ts (1 errors) ====
    class C {
       [e]
        ~
!!! error TS1022: An index signature parameter must have a type annotation.
    }